--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.datasource.username=root
 spring.datasource.password=Root@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+# Thymeleaf configuration
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.cache=false
+
+# File size configurations
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
